--- a/jobplus/templates/job/detail.html
+++ b/jobplus/templates/job/detail.html
@@ -42,7 +42,7 @@
                 <div class="bg-gray job-detail__foot">
                     <div class="row">
                         <div class="col-md-6">                          
-                            {% if job.users.job_id != job.id %}
+                            {% if job.users == [] %}
                             <a href="/job/{{ job.id }}/apply" class="btn btn-primary btn-lg submit-resume">投简历</a>
                             {% else %}
                             <a href="#" class="btn btn-primary btn-lg submit-resume disabled">投简历</a>
