--- a/jobplus/templates/base.html
+++ b/jobplus/templates/base.html
@@ -31,8 +31,8 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if not current_user.is_authenticated %}
-                    <li><a href='/'>企业注册</a></li>
-                    <li><a href='/'>求职者注册</a></li>
+                    <li><a href="{{ url_for('front.company_register') }}">企业注册</a></li>
+                    <li><a href="{{ url_for('front.user_register') }}">求职者注册</a></li>
                     <li><a href="{{ url_for('front.login') }}">登录</a></li>
                     {% else %}
                     <li class='dropdown'>
