--- a/jobplus/templates/company/admin_base.html
+++ b/jobplus/templates/company/admin_base.html
@@ -9,7 +9,7 @@ Admin
   <div class="col-md-3">
     <h4>企业管理</h4>
     <div class="list-group">
-      <a href="{{ url_for('company.company_admin', company_id=current_user.id) }}" class="list-group-item">职位管理</a>
+      <a href="{{ url_for('company.company_admin') }}" class="list-group-item">职位管理</a>
       <a href="#" class="list-group-item">投递管理</a>
     </div>
 
