--- a/jobplus/templates/job/index.html
+++ b/jobplus/templates/job/index.html
@@ -17,7 +17,7 @@
                     <p class="job__salary">{{ job.salary }}</p>
                     <p class="job__location">{{ job.location }}</p>
                     <a href="{{ job.company.url }}" target="_blank">
-                        <h4 class="job__company">{{ job.company.user.name }}</h4>
+                        <h4 class="job__company">{{ job.company.name }}</h4>
                     </a>
                     <p class="job__created_at">{{ job.created_at }}</p>
                 </div>
@@ -30,7 +30,7 @@
                     <p class="job__salary">{{ job.salary }}</p>
                     <p class="job__location">{{ job.location }}</p>
                     <a href="{{ job.company.url }}" target="_blank">
-                        <h4 class="job__company">{{ job.company.user.name }}</h4>
+                        <h4 class="job__company">{{ job.company.name }}</h4>
                     </a>
                     <p class="job__created_at">{{ job.created_at }}</p>
                 </div>
