--- a/jobplus/templates/company/admin_base.html
+++ b/jobplus/templates/company/admin_base.html
@@ -10,7 +10,7 @@ Admin
     <h4>企业管理</h4>
     <div class="list-group">
       <a href="{{ url_for('company.company_admin') }}" class="list-group-item">职位管理</a>
-      <a href="#" class="list-group-item">投递管理</a>
+      <a href="{{ url_for('company.apply_todolist') }}" class="list-group-item">投递管理</a>
     </div>
 
     {% block operation %}{% endblock %}
