完成管理员的职位管理功能 (#78)
* 修复bugs，实现企业的职位管理页面

* 完成简历投递功能&完成企业管理功能

* 完成管理员管理职位功能

--- a/jobplus/templates/admin/jobs.html
+++ b/jobplus/templates/admin/jobs.html
@@ -4,7 +4,7 @@
 {% block title %}职位管理{% endblock %}
 
 {% block operation %}
-<a href="#" type="button" class="btn btn-primary">
+<a href="{{ url_for('admin.add_job') }}" type="button" class="btn btn-primary">
     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
     添加职位
 </a>
@@ -24,12 +24,12 @@
         {% for job in pagination.items %}
         <tr>
             <td>{{ job.title }}</td>
-            <td>{{ job.company.user.name }}</td>
+            <td>{{ job.company.name }}</td>
             <td>{{ job.created_at }}</td>
             <td>{% if job.is_disable %}下线{% else %}上线{% endif %}</td>
             <td>
                 <div class='btn group' role='group'>
-                    <a href="#" type='button'>
+                    <a href="{{ url_for('admin.edit_job', job_id=job.id) }}" type='button'>
                         编辑
                     </a>
                     {% if job.is_disable %}
