--- a/jobplus/templates/admin/edit_job.html
+++ b/jobplus/templates/admin/edit_job.html
@@ -5,5 +5,5 @@
  
 {% block admin %}
 <h4 style="text-align: center">职位编辑</h4>
-{{ render_form(form, url_for('company.job_edit', job_id=job.id)) }}
+{{ render_form(form, url_for('admin.edit_job', job_id=job.id)) }}
 {% endblock %}
