基本已要求完成大部分功能 (#79)
* 修复bugs，实现企业的职位管理页面

* 完成简历投递功能&完成企业管理功能

* 基本已完成要求的大部分功能

* 修复企业名和内容不相符合的bug

--- a/jobplus/templates/company/index.html
+++ b/jobplus/templates/company/index.html
@@ -25,7 +25,7 @@
                   <h4 class="company__name">{{ company.user.name }}</h4>
               </a>
               <p>{{ company.site }}</p>
-              <p>{{ company.description }}</p>
+              <p class="company-desc">{{ company.description }}</p>
               <p>{{ company.location }}</p>
           </div>
         </div>
