--- a/jobplus/static/main.css
+++ b/jobplus/static/main.css
@@ -15,9 +15,7 @@ a:visited {
   text-decoration: none !important;
 }
 
-
-.course__name,
-.course__description {
+.company-desc {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
