--- a/jobplus/templates/index.html
+++ b/jobplus/templates/index.html
@@ -8,17 +8,23 @@
     <h2>一个专注于互联网求职，招聘的互联网平台</h2>
 </div>
 <ul class="nav nav-tabs list-title">
-    <li role="presentation" class="active"><a href="#">最新公司</a></li>
-    <li role="presentation" class="active"><a href="#">最新职位</a></li>
+    <li role="presentation" class="active"><a href="{{ url_for('front.index') }}">最新公司</a></li>
+    <li role="presentation" class="active"><a href="{{ url_for('front.latest_jobs') }}">最新职位</a></li>
 </ul>
-<div class="row">
-    <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="thumbnail" style='height: 336px;'>
-            <a href="#"><img class="lazy" src="#"></a>
-            <div class="caption">
-                <p>添加课程</p>
-            </div>
-        </div>
+
+<div class="company-list">
+    {% for company in companies %}    
+    <div class="col-sm-6 col-md-3 user-item">
+      <div class="thumbnail">
+          <img src="{{ company.logo }}" width="100" height="100" alt="...">
+          <a href="{{ company.url }}" target="_blank">
+              <h4 class="company__name">{{ company.user.name }}</h4>
+          </a>
+          <p>{{ company.site }}</p>
+          <p class="company-desc">{{ company.description }}</p>
+          <p>{{ company.location }}</p>
+      </div>
     </div>
+    {% endfor %}
 </div>
 {% endblock %}
